cleaning up z-index issues with floating boxes

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -586,6 +586,8 @@ body {
     }
 
     h2.portfolio-title {
+      z-index: 5;
+      position: relative;
       font-weight: 800;
       text-align: center;
       font-size: 60px;
